# sanelens

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  get-composeui.sh  get-sanelens.sh
.github/workflows/: ci.yml  release.yml
assets/compose-ui/: Makefile  app.js  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
assets/compose-ui/src/: App.svelte
assets/compose-ui/src/components/: LayoutShell.svelte  LogView.svelte  PanelGrid.svelte  SplitLayout.svelte  TopBar.svelte
assets/compose-ui/src/lib/: filters.ts  services.ts  url-state.ts
assets/compose-ui/src/ui/: Chip.svelte  TextInput.svelte
assets/sanelens/: package-lock.json  package.json  tailwind.config.cjs
assets/sanelens/src/: App.svelte  app.css
assets/sanelens/src/components/: FilterDrawer.svelte  FilterRow.svelte  LogView.svelte  PanelCard.svelte  ServicesPanel.svelte  TopBar.svelte  TrafficExplorer.svelte
assets/sanelens/src/lib/: colors.ts  constants.ts  filters.ts  types.ts
assets/sanelens/src/ui/: Button.svelte  ChipLink.svelte  Surface.svelte
assets/sanelens/tools/: mock-api.ts
src/: main.rs
src/app/: mod.rs  runner.rs  watchdog.rs
src/domain/: mod.rs  traffic.rs
src/infra/: compose.rs  derive.rs  engine.rs  mod.rs  process.rs  resolver.rs  traffic.rs  ui.rs
src/support/: args.rs  constants.rs  logging.rs  logging_tests.rs  mod.rs  multiline.rs  multiline_tests.rs  run.rs  services.rs  traffic.rs
