[package]
name = "sanelens"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "sanelens"
path = "src/main.rs"

[dependencies]
crossbeam-channel = "0.5"
getrandom = "0.2"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shell-words = "1.1"
signal-hook = "0.3"
strip-ansi-escapes = "0.2"
time = { version = "0.3", features = ["parsing", "formatting"] }
webbrowser = "1.0.6"
